--- a/third-challenge/composer.json
+++ b/third-challenge/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "symfony/console": "~2.0",
-    "guzzlehttp/guzzle": "^7.3"
+    "guzzlehttp/guzzle": "^7.3",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
